Wed Dec 27 16:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * os_include/net/os_if.h:
          Only define the IFF_x defines when ACE_LACKS_NETWORKING is
          defined to resolve redefinition warnings on windows

Wed Dec 27 14:06:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-posix-nonetworking.h:
          Added ACE_LACKS_GETHOSTENT

Wed Dec 27 12:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_T.h:
          Doxygen improvements

Wed Dec 27 11:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Define SO_ERROR when it is not defined yet

Wed Dec 27 10:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Added ACE_LACKS_LINGER support

        * ace/config-posix-nonetworking.h:
          Added ACE_LACKS_LINGER

Wed Dec 27 10:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Define SOCK_SEQPACKET when it is not defined yet

Wed Dec 27 10:27:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-posix-nonetworking.h:
          Added ACE_LACKS_IFCONF

        * os_include/net/os_if.h:
          Added some more types that need to be defined by ACE when
          we compile without network support

        * ace/SOCK_Dgram.cpp:
          Removed check for ACE_LACKS_IFREQ

        * ace/SOCK_Dgram_Bcast.cpp:
          Layout changes

Wed Dec 27 10:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          Define SO_BROADCAST when it is not defined yet

Wed Dec 27 10:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/netinet/os_in.h:
          Add sockaddr_un when ACE_LACKS_SOCKADDR_UN is defined

        * ace/config-posix-nonetworking.h:
          Added ACE_LACKS_SOCKADDR_UN
